crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__transaction_subscription__transaction_subscription.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/transaction_subscription.rs
expression: item
---
{
  "data": {
    "transactions": {
      "node": {
        "digest": "[digest]",
        "sender": {
          "address": "[address]"
        },
        "gasInput": {
          "gasBudget": "5000000000"
        },
        "effects": {
          "status": "SUCCESS",
          "balanceChanges": {
            "nodes": [
              {
                "amount": "1000",
                "coinType": {
                  "repr": "[pkg]::rtd::RTD"
                },
                "owner": {
                  "address": "[address]"
                }
              },
              {
                "amount": "-2977000",
                "coinType": {
                  "repr": "[pkg]::rtd::RTD"
                },
                "owner": {
                  "address": "[address]"
                }
              }
            ]
          }
        }
      }
    }
  }
}
